Renaming, cleanup, compiled our js files to remove warnings. Works on IE9 using a hack. Remember your html file can't have the same name as your swf file though.

--- a/src/babeliumPlayer.mxml
+++ b/src/babeliumPlayer.mxml
@@ -30,7 +30,7 @@
 									streamSource="{DataModel.getInstance().streamingResourcesPath}"
 									controlsEnabled="true"/>
 	
-	<fx:Style source="Main.css"/>
+	<fx:Style source="babeliumPlayer.css"/>
 	
 	<fx:Declarations>
 		<control:Controller/>
