--- a/src/view/PrivacyRights.mxml
+++ b/src/view/PrivacyRights.mxml
@@ -1,28 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<view:CustomTitleWindow xmlns:fx="http://ns.adobe.com/mxml/2009"
-						xmlns:s="library://ns.adobe.com/flex/spark"
-						xmlns:mx="library://ns.adobe.com/flex/mx"
-						xmlns:skins="skins.*"
-						width="360"
-						height="220"
-						styleName="privacyRightsPopup"
-						creationComplete="creationCompleteHandler()"
-						title="{resourceManager.getString('myResources','TITLE_PRIVACY_SETTINGS')}"
-						xmlns:view="view.*">
-	<view:layout>
-		<s:VerticalLayout paddingLeft="10"
-						  paddingRight="10"
-						  paddingTop="10"
-						  paddingBottom="10"/>
-	</view:layout>
+<s:SkinnableContainer xmlns:fx="http://ns.adobe.com/mxml/2009"
+					  xmlns:s="library://ns.adobe.com/flex/spark"
+					  xmlns:mx="library://ns.adobe.com/flex/mx"
+					  width="100%"
+					  height="100%"
+					  backgroundColor="0x000000"
+					  backgroundAlpha="0.75">
+
+	<s:layout>
+		<s:VerticalLayout paddingBottom="30" paddingLeft="30" paddingRight="30" paddingTop="30" verticalAlign="middle"/>
+	</s:layout>
+
 
 	<fx:Script>
 
 		<![CDATA[
 			import model.DataModel;
-			
+
 			import mx.controls.Alert;
 			import mx.events.CloseEvent;
+			import mx.utils.StringUtil;
 
 			private var _microphoneChanged:Boolean=false;
 			private var _microphoneSoundTestPassed:Boolean=false;
@@ -49,10 +46,10 @@
 
 			private function creationCompleteHandler():void
 			{
-				initDevices();
+				//initDevices();
 			}
 
-			private function initDevices():void
+			public function initDevices():void
 			{
 				if (devicesAdministrativelyProhibited())
 				{
@@ -173,7 +170,7 @@
 				if (event.code == "Microphone.Muted")
 				{
 					_devicesAllowed=false;
-					privacyRecButton.label=resourceManager.getString('myResources', 'BUTTON_OK');
+					privacyRecButton.label=resourceManager.getString('myResources', 'BUTTON_SHOW_PRIVACY_SETTINGS') ? resourceManager.getString('myResources', 'BUTTON_SHOW_PRIVACY_SETTINGS') : 'Show privacy settings';
 				}
 				if (event.code == "Microphone.Unmuted")
 				{
@@ -187,7 +184,7 @@
 				if (event.code == "Camera.Muted")
 				{
 					_devicesAllowed=false;
-					privacyRecButton.label=resourceManager.getString('myResources', 'BUTTON_OK');
+					privacyRecButton.label=resourceManager.getString('myResources', 'BUTTON_SHOW_PRIVACY_SETTINGS') ? resourceManager.getString('myResources', 'BUTTON_SHOW_PRIVACY_SETTINGS') : 'Show privacy settings';
 				}
 				if (event.code == "Camera.Unmuted")
 				{
@@ -215,104 +212,143 @@
 		]]>
 	</fx:Script>
 
-	<mx:ViewStack id="micCamViewStack"
-				  width="100%"
-				  height="100%">
+	<s:Label text="{resourceManager.getString('myResources','TITLE_PRIVACY_SETTINGS').toUpperCase()}"
+			 fontSize="18"
+			 fontWeight="bold"
+			 color="0xffffff"/>
+	<s:BorderContainer backgroundColor="0xffffff"
+					   backgroundAlpha="1.0"
+					   borderWeight="1"
+					   borderColor="0xa7a7a7"
+					   width="100%"
+					   height="80%">
+		
+		<s:BitmapImage source="@Embed('/resources/images/popup_bgr_unlock.png')"
+					   right="0"
+					   top="0"/>
 
-		<s:NavigatorContent id="micNotFoundErrorNavContent">
-			<s:VGroup id="micNotFoundError"
-					  width="100%">
-				<s:HGroup>
-					<mx:Text width="100%"
-							 text="{resourceManager.getString('myResources','TEXT_MIC_NOT_FOUND')}"/>
-					<mx:Image source="resources/images/privacy_micError.png"/>
-				</s:HGroup>
-				<s:HGroup>
-					<s:Button id="micNotFoundErrorRetryButton"
-							  label="{resourceManager.getString('myResources','BUTTON_RETRY')}"
-							  click="initDevices()"
-							  buttonMode="true"/>
+		<s:VGroup verticalAlign="middle"
+				  paddingBottom="20"
+				  paddingLeft="20"
+				  paddingRight="20"
+				  paddingTop="20"
+				  height="100%"
+				  width="100%">
 
-					<s:Button id="micNotFoundErrorCancelButton"
-							  label="{resourceManager.getString('myResources','BUTTON_CANCEL')}"
-							  click="cancelButtonClickHandler(event)"
-							  buttonMode="true"/>
-				</s:HGroup>
-			</s:VGroup>
-		</s:NavigatorContent>
 
-		<s:NavigatorContent id="cameraNotFoundErrorNavContent">
-			<s:VGroup id="cameraNotFoundError"
-					  width="100%">
-				<s:HGroup width="100%"
-						  verticalAlign="middle">
-					<mx:Text width="100%"
-							 text="{resourceManager.getString('myResources','TEXT_CAMERA_NOT_FOUND')}"/>
-					<mx:Image source="resources/images/privacy_webcamError.png"/>
-				</s:HGroup>
-				<s:HGroup>
-					<s:Button id="camNotFoundErrorRetryButton"
-							  label="{resourceManager.getString('myResources','BUTTON_RETRY')}"
-							  click="initDevices()"
-							  buttonMode="true"/>
-					<s:Button id="camNotFoundErrorCancelButton"
-							  label="{resourceManager.getString('myResources','BUTTON_CANCEL')}"
-							  click="cancelButtonClickHandler(event)"
-							  buttonMode="true"/>
-				</s:HGroup>
-			</s:VGroup>
-		</s:NavigatorContent>
+			
 
-		<s:NavigatorContent id="adminErrorNavContent">
-			<s:VGroup id="adminError"
-					  width="100%">
-				<mx:Text width="100%"
-						 text="{resourceManager.getString('myResources','TEXT_ADMINISTRATIVELY_DISABLED')}"/>
-				<s:Button id="adminErrorButton"
-						  label="{resourceManager.getString('myResources','BUTTON_OK')}"
-						  click="cancelButtonClickHandler(event)"
-						  buttonMode="true"/>
-			</s:VGroup>
-		</s:NavigatorContent>
-
-		<s:NavigatorContent id="privacyNoticeNavContent">
-			<s:VGroup id="privacyNotice"
-					  width="100%">
-				<s:HGroup width="100%"
-						  verticalAlign="middle">
-					<mx:Text width="100%"
-							 text="{resourceManager.getString('myResources','TEXT_PRIVACY_RIGHTS_EXPLAIN')}"/>
-					<mx:Image source="resources/images/privacy_settings.png"
-							  width="160"
-							  height="102"/>
-				</s:HGroup>
-				<s:HGroup width="100%"
+			<mx:ViewStack id="micCamViewStack"
+						  width="100%"
 						  height="100%"
-						  horizontalAlign="left"
-						  verticalAlign="bottom"
-						  paddingTop="8">
-					<s:Button id="privacyRecButton"
-							  label="{resourceManager.getString('myResources','BUTTON_OK')}"
-							  click="okButtonClickHandler(event)"
-							  styleName="bigBlueButton"
-							  buttonMode="true"/>
-					<s:Button id="privacyCancelButton"
-							  label="{resourceManager.getString('myResources','BUTTON_CANCEL')}"
-							  click="cancelButtonClickHandler(event)"
-							  styleName="bigBlueButton"
-							  buttonMode="true"/>
-				</s:HGroup>
-			</s:VGroup>
-		</s:NavigatorContent>
+						  creationPolicy="all">
 
-		<s:NavigatorContent id="micSoundTestNavContent">
-			<s:VGroup id="micSoundTest"
-					  width="100%">
-				<mx:Text text="{resourceManager.getString('myResources','TEXT_MIC_TEST_EXPLAIN')}"/>
-			</s:VGroup>
-		</s:NavigatorContent>
+				<s:NavigatorContent id="micNotFoundErrorNavContent">
+					<s:VGroup id="micNotFoundError"
+							  width="100%"
+							  height="100%"
+							  verticalAlign="middle">
+						<s:HGroup>
+							<mx:Text width="100%"
+									 text="{resourceManager.getString('myResources','TEXT_MIC_NOT_FOUND')}"/>
+							<mx:Image source="resources/images/privacy_micError.png"/>
+						</s:HGroup>
+						<s:HGroup>
+							<s:Button id="micNotFoundErrorRetryButton"
+									  label="{resourceManager.getString('myResources','BUTTON_RETRY')}"
+									  click="initDevices()"
+									  buttonMode="true"/>
 
-	</mx:ViewStack>
+							<s:Button id="micNotFoundErrorCancelButton"
+									  label="{resourceManager.getString('myResources','BUTTON_CANCEL')}"
+									  click="cancelButtonClickHandler(event)"
+									  buttonMode="true"/>
+						</s:HGroup>
+					</s:VGroup>
+				</s:NavigatorContent>
 
+				<s:NavigatorContent id="cameraNotFoundErrorNavContent">
+					<s:VGroup id="cameraNotFoundError"
+							  width="100%"
+							  height="100%"
+							  verticalAlign="middle">
+						<s:HGroup width="100%"
+								  verticalAlign="middle">
+							<mx:Text width="100%"
+									 text="{resourceManager.getString('myResources','TEXT_CAMERA_NOT_FOUND')}"/>
+							<mx:Image source="resources/images/privacy_webcamError.png"/>
+						</s:HGroup>
+						<s:HGroup>
+							<s:Button id="camNotFoundErrorRetryButton"
+									  label="{resourceManager.getString('myResources','BUTTON_RETRY')}"
+									  click="initDevices()"
+									  buttonMode="true"/>
+							<s:Button id="camNotFoundErrorCancelButton"
+									  label="{resourceManager.getString('myResources','BUTTON_CANCEL')}"
+									  click="cancelButtonClickHandler(event)"
+									  buttonMode="true"/>
+						</s:HGroup>
+					</s:VGroup>
+				</s:NavigatorContent>
 
-</view:CustomTitleWindow>
+				<s:NavigatorContent id="adminErrorNavContent">
+					<s:VGroup id="adminError"
+							  width="100%"
+							  height="100%"
+							  verticalAlign="middle">
+						<mx:Text width="100%"
+								 text="{resourceManager.getString('myResources','TEXT_ADMINISTRATIVELY_DISABLED')}"/>
+						<s:Button id="adminErrorButton"
+								  label="{resourceManager.getString('myResources','BUTTON_OK')}"
+								  click="cancelButtonClickHandler(event)"
+								  buttonMode="true"/>
+					</s:VGroup>
+				</s:NavigatorContent>
+
+				<s:NavigatorContent id="privacyNoticeNavContent">
+					<s:VGroup id="privacyNotice"
+							  width="100%"
+							  height="100%"
+							  verticalAlign="middle">
+						<s:HGroup width="100%"
+								  height="100%"
+								  verticalAlign="middle">
+							<mx:Text width="100%"
+									 text="{resourceManager.getString('myResources','TEXT_PRIVACY_RIGHTS_EXPLAIN')}"/>
+							<mx:Image source="resources/images/privacy_settings.png"
+									  width="160"
+									  height="102"/>
+						</s:HGroup>
+						<s:HGroup width="100%"
+								  horizontalAlign="left"
+								  verticalAlign="bottom"
+								  paddingTop="8">
+							<s:Button id="privacyRecButton"
+									  label="{ resourceManager.getString('myResources','BUTTON_SHOW_PRIVACY_SETTINGS') ? resourceManager.getString('myResources','BUTTON_SHOW_PRIVACY_SETTINGS') : 'Show privacy settings' }"
+									  click="okButtonClickHandler(event)"
+									  styleName="bigBlueButton"
+									  buttonMode="true"/>
+							<s:Button id="privacyCancelButton"
+									  label="{resourceManager.getString('myResources','BUTTON_CANCEL')}"
+									  click="cancelButtonClickHandler(event)"
+									  styleName="bigBlueButton"
+									  buttonMode="true"/>
+						</s:HGroup>
+					</s:VGroup>
+				</s:NavigatorContent>
+
+				<s:NavigatorContent id="micSoundTestNavContent">
+					<s:VGroup id="micSoundTest"
+							  width="100%"
+							  height="100%"
+							  verticalAlign="middle">
+						<mx:Text text="{resourceManager.getString('myResources','TEXT_MIC_TEST_EXPLAIN')}"/>
+					</s:VGroup>
+				</s:NavigatorContent>
+
+			</mx:ViewStack>
+		</s:VGroup>
+
+	</s:BorderContainer>
+
+</s:SkinnableContainer>
