--- a/themes/babelium/css/forms.css
+++ b/themes/babelium/css/forms.css
@@ -34,7 +34,7 @@ textarea:focus
 	border-width: 3px;
 }
 
-input[type=button], button
+input[type=button]:enabled, button:enabled, input[type=button]:disabled, button:disabled
 {		
 	border: 1px solid #92D3D5;
 	height: 27px;
@@ -55,6 +55,11 @@ input[type=button], button
 	-o-box-shadow: -2px 2px 2px rgba(0,0,0,.2);
 	-ms-box-shadow: -2px 2px 2px rgba(0,0,0,.2);
 	box-shadow: -2px 2px 2px rgba(0,0,0,.2);
+}
+
+input[type=button]:enabled, button:enabled
+{
+	color: #92D3D5;
 	
 	/** Gradient **/
 	background: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#E2EFF3));
@@ -63,7 +68,18 @@ input[type=button], button
 	background: -ms-linear-gradient(top, white, #E2EFF3);
 }
 
-input[type=button]:hover, button:hover
+input[type=button]:disabled, button:disabled
+{
+	color: #C9C9C9;
+	
+	/** Gradient **/
+	background: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#D9D9D9));
+	background: -moz-linear-gradient(top, white, #D9D9D9);
+	background: -o-linear-gradient(top, white, #D9D9D9);
+	background: -ms-linear-gradient(top, white, #D9D9D9);
+}
+
+input[type=button]:hover:enabled, button:hover:enabled
 {
 	cursor: pointer;	
 	text-shadow: 1px 1px 1px rgba(0,0,0,.2);
