--- a/themes/babelium/css/main.css
+++ b/themes/babelium/css/main.css
@@ -770,6 +770,10 @@ section#maincontent
 		
 		margin-top: 20px;
 	}
+	
+	section#maincontent > section > div.sameMargin{
+		padding: 20px;
+	}
 
 	section#maincontent > header
 	{
